# moodflix

./: .gitignore  CLAUDE.md  README.md  render.yaml
backend/: .env.example  pyproject.toml  railway.toml  run_sync.py
backend/app/: config.py  dependencies.py  main.py
backend/app/models/: chat.py  media.py  playlist.py  search.py  taste.py  user.py
backend/app/routers/: admin.py  browse.py  chat.py  detail.py  pitch.py  playlist.py  search.py  taste.py  user.py
backend/app/services/: chat_service.py  embedding_service.py  pitch_service.py  playlist_service.py  search_service.py  taste_service.py  tmdb_service.py  user_service.py
backend/app/workers/: embedding_gen.py  tmdb_sync.py
backend/tests/: test_admin_router.py  test_auth.py  test_browse_router.py  test_dependencies.py  test_detail_router.py  test_embedding_service.py  test_search_router.py  test_search_service.py  test_tmdb_service.py  test_user_router.py  test_user_service.py  test_workers.py
docs/superpowers/specs/: 2026-04-12-moodflix-ai-redesign.md
frontend/: .env.example
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/components/: AuthGate.tsx  Carousel.tsx  ChatPanel.tsx  MoodPills.tsx  MovieCard.tsx  Navbar.tsx  PlaylistCard.tsx  SearchBar.tsx  SkeletonCard.tsx  SmartFilter.tsx  TasteDNA.tsx
frontend/src/contexts/: ChatContext.tsx  ToastContext.tsx
frontend/src/hooks/: useAuth.ts  useSearch.ts
frontend/src/lib/: api.ts  firebase.ts
frontend/src/types/: index.ts
(+2 files in other folders)
