[project]
name = "moodflix-backend"
version = "0.1.0"
description = "MoodFlix - mood-based movie and TV series discovery engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "openai>=1.50.0",
    "chromadb>=0.5.0",
    "firebase-admin>=6.5.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
